--- a/index.Rmd
+++ b/index.Rmd
@@ -62,10 +62,23 @@ str(d2)
 ## Test Data 3
 
 ```{r tidy=FALSE}
-d3 <- data.frame(x=rep(1:5,each=100),
-                 y=c(unlist(lapply(1:5, function(x){rnorm(n=100,mean=2^x)})),
-                     unlist(lapply(1:5, function(x){rnorm(n=100,mean=50+2^x)}))),
-                 g=rep(1:2,each=500))
+d3 <- data.frame(
+  x=rep(1:5,each=100),
+  y=c(unlist(lapply(1:5, function(x){rnorm(n=100,mean=2^x)})),
+      unlist(lapply(1:5, function(x){rnorm(n=100,mean=50+2^x)}))),
+  g=rep(1:2,each=500))
+```
+
+---
+
+## Test Data 4
+
+```{r}
+x <- seq(pi/4, 5 * pi, length.out = 100)
+y <- seq(pi/4, 5 * pi, length.out = 100)
+r <- as.vector(sqrt(outer(x^2, y^2, "+")))
+d4 <- expand.grid(x=x, y=y)
+d4$z <- cos(r^2) * exp(-r/(pi^3))
 ```
 
 --- &twocol
@@ -99,52 +112,104 @@ install.packages('lattice', dependencies = TRUE)
 - <span style="color:blue;">cloud</span>: Three-dimensional scatter plots
 - <span style="color:blue;">wireframe</span>: Three-dimensional surface plots
 
----
+--- &twocol
 
 ## Lattice - xyplot
 
-```{r fig.height=5.5, fig.width=10}
-xyplot(y~x,d1) # long data
+*** left
+
+```{r eval=FALSE}
+xyplot(y~x,d1)
 ```
 
----
+*** right
+
+```{r echo=FALSE, fig.height=6}
+xyplot(y~x,d1)
+```
+
+--- &twocol
 
 ## Lattice - xyplot w/ conditioning factor
 
-```{r fig.height=5.5, fig.width=10}
-xyplot(y~x|type,d1) # long data
+*** left
+
+```{r eval=FALSE}
+xyplot(y~x|type,d1)
 ```
 
----
+*** right
+
+```{r echo=FALSE, fig.height=6}
+xyplot(y~x|type,d1)
+```
+
+--- &twocol
 
 ## Lattice - xyplot w/ grouping factor
 
-```{r fig.height=5.5, fig.width=10}
-xyplot(y~x,d1,groups=type) # long data
+*** left
+
+```{r eval=FALSE}
+xyplot(y~x,d1,groups=type)
 ```
 
----
+*** right
+
+```{r echo=FALSE, fig.height=6}
+xyplot(y~x,d1,groups=type)
+```
+
+--- &twocol
 
 ## Lattice - xyplot w/ two y variables
 
-```{r fig.height=5.5, fig.width=10}
-xyplot(y.cos+y.sin~x,d2) # wide data
+*** left
+
+```{r eval=FALSE}
+xyplot(y.cos+y.sin~x,d2)
 ```
 
----
+*** right
+
+```{r echo=FALSE, fig.height=6}
+xyplot(y.cos+y.sin~x,d2)
+```
+
+--- &twocol
 
 ## Lattice - xyplot w/ type="l"
 
-```{r fig.height=5.5, fig.width=10}
-xyplot(y~x,d1,groups=type, type="l") # long data
+*** left
+
+```{r eval=FALSE, tidy=FALSE}
+xyplot(y ~ x, d1, groups = type,
+  type = "l")
 ```
 
----
+*** right
+
+```{r echo=FALSE, fig.height=6}
+xyplot(y ~ x, d1, groups = type,
+  type = "l")
+```
+
+--- &twocol
 
 ## Lattice - xyplot w/ type="b"
 
-```{r fig.height=5.5, fig.width=10}
-xyplot(y~x,d1,groups=type, type="b") # long data
+*** left
+
+```{r eval=FALSE, tidy=FALSE}
+xyplot(y ~ x, d1, groups = type,
+  type = "b")
+```
+
+*** right
+
+```{r echo=FALSE, fig.height=6}
+xyplot(y ~ x, d1, groups = type,
+  type = "b")
 ```
 
 --- &twocol
@@ -154,21 +219,23 @@ xyplot(y~x,d1,groups=type, type="b") # long data
 *** left
 
 ```{r eval=F, tidy=FALSE}
-xyplot(y ~ x, d1, groups = type, type="b",
-       panel=function(...) {
-         panel.xyplot(...)
-         }
-       )
+xyplot(y ~ x, d1, groups = type, 
+  type = "b",
+  panel=function(...) {
+    panel.xyplot(...)
+  }
+)
 ```
 
 *** right
 
 ```{r echo=F, fig.height=6}
-xyplot(y ~ x, d1, groups = type, type="b",
-       panel=function(...) {
-         panel.xyplot(...)
-         }
-       )
+xyplot(y ~ x, d1, groups = type, 
+  type = "b",
+  panel=function(...) {
+    panel.xyplot(...)
+  }
+)
 ```
 
 --- &twocol
@@ -178,11 +245,12 @@ xyplot(y ~ x, d1, groups = type, type="b",
 *** left
 
 ```{r eval=F, tidy=FALSE}
-xyplot(y ~ x, d1, groups = type, type="p",
-  panel=panel.superpose,
-  panel.groups=function(...,pch,lwd) {
-    panel.xyplot(...,pch=2)
-    panel.loess(..., span=.2, lwd=4)
+xyplot(y ~ x, d1, groups = type,
+  type = "p",
+  panel = panel.superpose,
+  panel.groups = function(..., pch, lwd) {
+    panel.xyplot(..., pch = 2)
+    panel.loess(..., span = .2, lwd = 4)
   }
 )
 ```
@@ -190,53 +258,102 @@ xyplot(y ~ x, d1, groups = type, type="p",
 *** right
 
 ```{r echo=F, fig.height=6}
-xyplot(y ~ x, d1, groups = type, type="p",
-  panel=panel.superpose,
-  panel.groups=function(...,pch,lwd) {
-    panel.xyplot(...,pch=2)
-    panel.loess(..., span=.2, lwd=4)
+xyplot(y ~ x, d1, groups = type,
+  type = "p",
+  panel = panel.superpose,
+  panel.groups = function(..., pch, lwd) {
+    panel.xyplot(..., pch = 2)
+    panel.loess(..., span = .2, lwd = 4)
   }
 )
 ```
 
----
+--- &twocol
 
 ## Lattice - histogram
 
-```{r fig.height=5.5, fig.width=10}
+*** left
+
+```{r eval=FALSE}
 histogram(~y,d3)
 ````
 
----
+*** right
+
+```{r echo=FALSE, fig.height=6}
+histogram(~y,d3)
+````
+
+--- &twocol
 
 ## Lattice - histogram w/ conditioning factor
 
-```{r fig.height=5.5, fig.width=10}
+*** left
+
+```{r eval=FALSE}
 histogram(~y|as.factor(g),d3)
 ````
 
----
+*** right
+
+```{r echo=FALSE, fig.height=6}
+histogram(~y|as.factor(g),d3)
+````
+
+--- &twocol
 
 ## Lattice - barchart
 
-```{r fig.height=5.5, fig.width=10}
-barchart(y~as.factor(x),aggregate(y~x,data=d3,mean))
+*** left
+
+```{r eval=FALSE, tidy=FALSE}
+barchart(y ~ as.factor(x),
+  aggregate(y ~ x, data = d3, mean))
 ```
 
----
+*** right
+
+```{r echo=FALSE, fig.height=6}
+barchart(y ~ as.factor(x),
+  aggregate(y ~ x, data = d3, mean))
+```
+
+--- &twocol
 
 ## Lattice - barchart w/ conditioning factor
 
-```{r fig.height=5.5, fig.width=10}
-barchart(y~as.factor(x)|as.factor(g),aggregate(y~x+g,data=d3,mean))
+*** left
+
+```{r eval=FALSE, tidy=FALSE}
+barchart(y ~ as.factor(x) | as.factor(g),
+  aggregate(y ~ x + g, data = d3, mean))
 ```
 
----
+*** right
+
+```{r echo=FALSE, fig.height=6}
+barchart(y ~ as.factor(x) | as.factor(g),
+  aggregate(y ~ x + g, data = d3, mean))
+```
+
+--- &twocol
 
 ## Lattice - barchart w/ grouping factor
 
-```{r fig.height=5.5, fig.width=10}
-barchart(y~as.factor(x),aggregate(y~x+g,data=d3,mean),groups=as.factor(g))
+*** left
+
+```{r eval=FALSE, tidy=FALSE}
+barchart(y ~ as.factor(x),
+  aggregate(y ~ x + g, data = d3, mean),
+  groups = as.factor(g))
+```
+
+*** right
+
+```{r echo=FALSE, fig.height=6}
+barchart(y ~ as.factor(x),
+  aggregate(y ~ x + g, data = d3, mean),
+  groups = as.factor(g))
 ```
 
 --- &twocol
@@ -246,19 +363,19 @@ barchart(y~as.factor(x),aggregate(y~x+g,data=d3,mean),groups=as.factor(g))
 *** left
 
 ```{r eval=FALSE, tidy=FALSE}
-barchart(y~as.factor(x),
-         aggregate(y~x+g,data=d3,mean),
-         groups=as.factor(g),
-         auto.key=T)
+barchart(y ~ as.factor(x),
+  aggregate(y ~ x + g, data = d3, mean),
+  groups = as.factor(g),
+  auto.key = T)
 ```
 
 *** right
 
 ```{r echo=FALSE, fig.height=6}
-barchart(y~as.factor(x),
-         aggregate(y~x+g,data=d3,mean),
-         groups=as.factor(g),
-         auto.key=T)
+barchart(y ~ as.factor(x),
+  aggregate(y ~ x + g, data = d3, mean),
+  groups = as.factor(g),
+  auto.key = T)
 ```
 
 --- &twocol
@@ -268,19 +385,19 @@ barchart(y~as.factor(x),
 *** left
 
 ```{r eval=FALSE, tidy=FALSE}
-barchart(y~as.factor(x),
-         aggregate(y~x+g,data=d3,mean),
-         groups=as.factor(g),
-         auto.key=list(columns=2))
+barchart(y ~ as.factor(x),
+  aggregate(y ~ x + g, data = d3, mean),
+  groups = as.factor(g),
+  auto.key = list(columns = 2))
 ```
 
 *** right
 
 ```{r echo=FALSE, fig.height=6}
-barchart(y~as.factor(x),
-         aggregate(y~x+g,data=d3,mean),
-         groups=as.factor(g),
-         auto.key=list(columns=2))
+barchart(y ~ as.factor(x),
+  aggregate(y ~ x + g, data = d3, mean),
+  groups = as.factor(g),
+  auto.key = list(columns = 2))
 ```
 
 --- &twocol
@@ -290,17 +407,33 @@ barchart(y~as.factor(x),
 *** left
 
 ```{r eval=FALSE, tidy=FALSE}
-barchart(y~as.factor(x),
-         aggregate(y~x+g,data=d3,mean),
-         groups=as.factor(g),
-         auto.key=list(space="right"))
+barchart(y ~ as.factor(x),
+  aggregate(y ~ x + g, data = d3, mean),
+  groups = as.factor(g),
+  auto.key = list(space = "right"))
 ```
 
 *** right
 
 ```{r echo=FALSE, fig.height=6}
-barchart(y~as.factor(x),
-         aggregate(y~x+g,data=d3,mean),
-         groups=as.factor(g),
-         auto.key=list(space="right"))
+barchart(y ~ as.factor(x),
+  aggregate(y ~ x + g, data = d3, mean),
+  groups = as.factor(g),
+  auto.key = list(space = "right"))
+```
+
+--- &twocol
+
+## Lattice - levelplot
+
+*** left
+
+```{r eval=FALSE}
+levelplot(z~x+y,d4)
+```
+
+*** right
+
+```{r echo=FALSE, fig.height=6}
+levelplot(z~x+y,d4)
 ```
